# mortality-rings

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mortality_rings/: __init__.py  cli.py  v2.py  v3.py
tests/: test_v3.py
